Feed category filters implemented
Added filter functionality and made some clean up in the code.
Probably can improve it in other parts.

Dealing with ionic serve right now, transpiller went crazy on me,
nagging me about whitespaces, break and comments. D:

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,14 @@
 <ion-header>
-    <ion-navbar> <!-- Here's the app navbar, it can contain the App title, buttons, etc -->
+    <ion-navbar><!-- Here's the app navbar, it can contain the App title, buttons, etc -->
         <ion-title>
             Newsfeed
         </ion-title>
+        <ion-buttons end><!-- "end" determines the button placement in the bar -->
+            <button ion-button icon-only (click)="showFilters()">
+                <ion-icon name="funnel">
+                </ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
