--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,7 +37,7 @@
     </ion-list>
     
     <!-- Here we'll fetch older posts! -->
-    <ion-infinite-scroll>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content loadingText="Loading more data...">
         </ion-infinite-scroll-content>
     </ion-infinite-scroll>
