--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content><!-- Dinamic content should always be placed here -->
+<ion-content><!-- Dynamic content should always be placed here -->
     
     <!-- Here we'll fetch new posts! -->
     <ion-refresher (ionRefresh)="doRefresh($event)" [pullMin]=90>
